updated typechecker + merge

--- a/README
+++ b/README
@@ -36,3 +36,7 @@ TO DO::
  - implement part II of instructions
  - implement part III of instructions
  - implement part IV of instructions
+ - debugging:
+   x get print to work
+   - get read to work
+
