passed test 32 (and it only took 3 hours for one line of code....)

--- a/README
+++ b/README
@@ -40,21 +40,9 @@ TO DO::
    x get print to work
    x get read to work
 
-arrays: 24, 25,
-
-     [echo] Begin execution of p25csx.class
-     [java] Exception in thread "main" java.lang.VerifyError: (class: p25csx, method: main signature: ()V) Expecting to find array of ints on stack
-     [java] 	at java.lang.Class.getDeclaredMethods0(Native Method)
+array cloning: 47
  
-29, 
-     [java] Testing Program p29csx
-     [java] Exception in thread "main" java.lang.NoSuchFieldError: x$
-     [java] 	at p29csx.main(p29csx.j)
-     [java] 	at p29csx.main(p29csx.j)
-     [java] Java Result: 1
-
-
-30, 31, 32, 33, 36, 37, 38, 39, 40, 41, 42, 43, 46, 47
+31, 33, 36, 37, 38, 40, 41, 42, 43,
 
 
 
